docs/api/qiskit/0.40/qiskit.transpiler.passes.CollectAndCollapse.mdx
---
title: CollectAndCollapse (v0.40)
description: API reference for qiskit.transpiler.passes.CollectAndCollapse in qiskit v0.40
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CollectAndCollapse
---

# CollectAndCollapse

<Class id="qiskit.transpiler.passes.CollectAndCollapse" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/transpiler/passes/optimization/collect_and_collapse.py" signature="CollectAndCollapse(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  A general transpiler pass to collect and to consolidate blocks of nodes in a circuit.

  This transpiler pass depends on two functions: the collection function and the collapsing function. The collection function `collect_function` takes a DAG and returns a list of blocks. The collapsing function `collapse_function` takes a DAG and a list of blocks, consolidates each block, and returns the modified DAG.

  The input and the output DAGs are of type [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit"), however when exploiting commutativity analysis to collect blocks, the [`DAGDependency`](qiskit.dagcircuit.DAGDependency "qiskit.dagcircuit.DAGDependency") representation is used internally. To support this, the `collect_function` and `collapse_function` should work with both types of DAGs and DAG nodes.

  Other collection and consolidation transpiler passes, for instance [`CollectLinearFunctions`](qiskit.transpiler.passes.CollectLinearFunctions "qiskit.transpiler.passes.CollectLinearFunctions"), may derive from this pass, fixing `collect_function` and `collapse_function` to specific functions.

  **Parameters**

  *   **collect\_function** (*callable*) – a function that takes a DAG and returns a list of “collected” blocks of nodes
  *   **collapse\_function** (*callable*) – a function that takes a DAG and a list of “collected” blocks, and consolidates each block.
  *   **do\_commutative\_analysis** (*bool*) – if True, exploits commutativity relations between nodes.

  ## Methods

  <span id="qiskit-transpiler-passes-collectandcollapse-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CollectAndCollapse.name" signature="CollectAndCollapse.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-collectandcollapse-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CollectAndCollapse.run" signature="CollectAndCollapse.run(dag)">
    Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CollectAndCollapse.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CollectAndCollapse.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

